--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '24.1.0'  # Updated to use your Node.js version
-          cache: 'npm'
+          node-version: '24.1.0'
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
       
       - name: Build
         run: npm run build
