--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Set this to your default branch
+      - main
 
 permissions:
   contents: write
@@ -19,16 +19,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24.1.0'
+          cache: 'npm'
+          cache-dependency-path: 'app/package-lock.json'
 
-      - name: Install Dependencies
-        run: npm install
-      
-      - name: Build
-        run: npm run build
+      - name: Install Dependencies and Build
+        run: |
+          cd app
+          npm ci
+          npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist  # The folder the action should deploy (your build output)
-          branch: gh-pages  # The branch the action should deploy to
-          clean: true  # Automatically remove deleted files from the deploy branch
+          folder: app/build  # Path to your React app's build output
+          branch: gh-pages
+          clean: true
