--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,36 +2,58 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '24.1.0'
+          node-version: "24.1.0"
           cache: 'npm'
           cache-dependency-path: 'app/package-lock.json'
-
-      - name: Install Dependencies and Build
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Install dependencies
         run: |
           cd app
           npm ci
-          # Prevent treating warnings as errors in CI
+      - name: Build
+        run: |
+          cd app
           CI=false npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          folder: app/build  # Path to your React app's build output
-          branch: gh-pages
-          clean: true
+          path: './app/build'
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
