--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "pokemon-johto-interactable-music-map",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nikouusitalo.github.io/pokemon-johto-interactable-music-map",
+  "homepage": "https://nikouu.github.io/pokemon-johto-interactable-music-map",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
